--- a/2/index.html
+++ b/2/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Tom Herni</title>
-    <link href="css/fonts.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
   </head>
 
   <body>
     <div class="top-bar"></div>
 
-    <main>
+    <div class="container">
       <div>
         <h1>Hello, I'm <span>Tom Herni</span>.</h1>
         <p>
           Passionate about designing and building creative solutions for the web.
-          To exceed the client's and end-user's satisfaction and expectations—as well as my own. Let's do it :-)
+          To exceed the client's and end-user's satisfaction and expectations — as well as my own. Let's do it :-)
         </p>
-        <button>Send an email</button>
+        <button>Send a message</button>
         <a href="#">LinkedIn profile</a>
       </div>
-    </main>
+    </div>
   </body>
 </html>
