--- a/2/index.html
+++ b/2/index.html
@@ -8,8 +8,6 @@
   </head>
 
   <body>
-    <div class="top-bar"></div>
-
     <div class="container">
       <div>
         <h1>Hello, I'm <span>Tom Herni</span>.</h1>
@@ -17,8 +15,8 @@
           Passionate about designing and building creative solutions for the web.
           To exceed the client's and end-user's satisfaction and expectations — as well as my own. Let's do it :-)
         </p>
-        <button>Send a message</button>
-        <a href="#">LinkedIn profile</a>
+        <button><span>Send message</span></button>
+        <a href="#"><span>Visit my LinkedIn</span></a>
       </div>
     </div>
   </body>
