--- a/2/index.html
+++ b/2/index.html
@@ -11,11 +11,18 @@
   <body>
     <div class="container">
       <div>
+        <!-- <h1>Lorem ipsum dolor <span>sit amet</span>.</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta id esse
+          laborum doloremque tenetur unde reiciendis cumque. Quas facere perspiciatis delectus eius sunt tempore.
+        </p> -->
+
         <h1>Hello, I'm <span>Tom Herni</span>.</h1>
         <p>
           Passionate about designing and building creative solutions for the web.
           To exceed the client's and end-user's satisfaction and expectations — as well as my own. Let's do it :-)
         </p>
+
         <button>Send message</button>
         <a href="#"><span>Visit my LinkedIn</span></a>
       </div>
