Another update yay

--- a/2/index.html
+++ b/2/index.html
@@ -22,6 +22,19 @@
       </div>
     </div>
 
+
+    <div class="container">
+      <div>
+        <h1>Send me <span>a message</span>.</h1>
+        <p>Feel free to get in touch and I'll get back to you quickly.</p>
+
+        <input>
+        <input>
+        <textarea></textarea>
+        <button>Send message</button>
+      </div>
+    </div>
+
     <script>
       (function() {
         /**
