--- a/2/index.html
+++ b/2/index.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container splash">
       <div>
-        <h1>Hello, I'm <span>Tom Herni</span>.</h1>
+        <h1>Hello, I'm <span>Tom Herni</span></h1>
         <p>
           Passionate about designing and building creative solutions for the web.
           To exceed the client's and end-user's satisfaction and expectations — as well as my own. Let's do it :-)
@@ -23,14 +23,14 @@
     </div>
 
 
-    <div class="container">
+    <div class="container contact">
       <div>
-        <h1>Send me <span>a message</span>.</h1>
+        <h2>Send me <span>a message</span></h2>
         <p>Feel free to get in touch and I'll get back to you quickly.</p>
 
-        <input>
-        <input>
-        <textarea></textarea>
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email">
+        <textarea placeholder="Message"></textarea>
         <button>Send message</button>
       </div>
     </div>
