--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,26 @@
 -->
 
 <!doctype html>
-<html lang="en">
+<html lang="en-US">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tom Herni</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link href="img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 </head>
-
 <body>
-  <div class="😎">
+  <main class="😎">
     <h1>Hello, I'm <span>Tom Herni</span></h1>
     <p>
       <span>There's not much here at the moment,</span>
-      <span>but feel free to <a href="https://www.linkedin.com/in/tomherni/" target="_blank">get in touch</a> with me.</span>
+      <span>
+        but feel free to
+        <a href="https://www.linkedin.com/in/tomherni/" target="_blank">get in touch</a>
+        with me.
+      </span>
     </p>
-  </div>
+  </main>
 </body>
 </html>
