--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,15 @@
 <!doctype html>
 <html lang="en-US">
 <head>
+  <title>Tom Herni</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tom Herni</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+  <meta name="description" content="Personal website of Tom Herni. Feel free to reach out!">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900&display=swap">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 <body>
   <main class="😎">
