--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 <body>
-  <main class="😎">
+  <main>
     <h1>Hello, I'm <span>Tom Herni</span></h1>
     <p>
       <span>There's not much here at the moment,</span>
