--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,37 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
 <head>
   <title>Tom Herni</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Personal website of Tom Herni. Feel free to reach out!">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,900&display=swap">
+  <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700&display=swap">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 <body>
   <main>
-    <h1>Hello, I'm <span>Tom Herni</span></h1>
+    <div class="🦄">
+      <picture>
+        <source srcset="img/picture.webp" type="image/webp">
+        <img src="img/picture.png" width="150" height="150" alt="Picture of Tom sitting outside and smiling. He is happy to see you!">
+      </picture>
+    </div>
+
+    <h1>Hello! My name is <span>Tom</span>,</h1>
+
+    <p>
+      <span>and I'm passionate about designing and</span>
+      <span>building creative solutions for the web.</span>
+    </p>
+
     <p>
       <span>There's not much here at the moment,</span>
       <span>
         but feel free to
-        <a href="https://www.linkedin.com/in/tomherni/" target="_blank">get in touch</a>
+        <a href="https://www.linkedin.com/in/tomherni/" target="_blank" rel="noopener noreferrer">get in touch</a>
         with me.
       </span>
     </p>
