Update picture ALT text

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="🦄">
       <picture>
         <source srcset="img/picture.webp" type="image/webp">
-        <img src="img/picture.png" width="150" height="150" alt="Picture of Tom sitting outside and smiling. He is happy to see you!">
+        <img src="img/picture.png" width="150" height="150" alt="Picture of Tom sitting outside and smiling. He is happy you're here!">
       </picture>
     </div>
 
