Add CTA link component

--- a/src/index.html
+++ b/src/index.html
@@ -50,14 +50,7 @@
         <span>building creative solutions for the web.</span>
       </p>
 
-      <p>
-        <span>There's not much here at the moment,</span>
-        <span>
-          but feel free to
-          <a href="https://www.linkedin.com/in/tomherni/" target="_blank" rel="noopener noreferrer">get in touch</a>
-          with me.
-        </span>
-      </p>
+      <p>Feel free to <cta-link>get in touch</cta-link> with me!</p>
     </div>
     <script type="module" src="./js/index.js"></script>
   </body>
