Add a my-picture component

--- a/src/index.html
+++ b/src/index.html
@@ -31,17 +31,7 @@
         </div>
       </div>
 
-      <div class="🦄">
-        <picture>
-          <source srcset="./img/picture.webp" type="image/webp" />
-          <img
-            src="./img/picture.png"
-            width="150"
-            height="150"
-            alt="Picture of Tom sitting outside and smiling. He is happy you're here!"
-          />
-        </picture>
-      </div>
+      <my-picture></my-picture>
 
       <h1>Hello! My name is <span>Tom</span>,</h1>
 
