--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700&display=swap"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700&display=swap" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/vnd.microsoft.icon" />
   </head>
   <body>
     <div class="🚀">
@@ -42,6 +42,6 @@
 
       <p>Feel free to <cta-link>get in touch</cta-link> with me!</p>
     </div>
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
