Use curly quote

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <h1>Hello! My name is <span>Tom</span>,</h1>
 
       <p>
-        <span>and I'm passionate about designing and</span>
+        <span>and I&rsquo;m passionate about designing and</span>
         <span>building creative solutions for the web.</span>
       </p>
 
