feat: add analytics

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       );
     </script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://www.google-analytics.com/">
     <link
       rel="preload"
       as="style"
@@ -22,6 +23,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700&display=swap" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/vnd.microsoft.icon" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NLEB0TDGG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-9NLEB0TDGG');
+    </script>
   </head>
   <body>
     <div class="🚀">
