--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NLEB0TDGG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
       gtag('config', 'G-9NLEB0TDGG');
     </script>
