--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       );
     </script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://www.google-analytics.com/">
+    <link rel="preconnect" href="https://www.google-analytics.com/" />
     <link
       rel="preload"
       as="style"
